force-app/main/default/objects/Time_Entry__c/fields/Friday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Friday_Hours__c</fullName>
    <label>Friday Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>