force-app/main/default/objects/Time_Entry__c/fields/Friday_Notes__c.field-meta.xml
<CustomField>
    <fullName>Friday_Notes__c</fullName>
    <label>Friday Notes</label>
    <type>TextArea</type>
</CustomField>