force-app/main/default/objects/Time_Entry__c/fields/Monday_Date__c.field-meta.xml
<CustomField>
    <fullName>Monday_Date__c</fullName>
    <label>Monday Date</label>
    <type>Date</type>
</CustomField>