force-app/main/default/objects/Time_Entry__c/fields/Monday_Notes__c.field-meta.xml
<CustomField>
    <fullName>Monday_Notes__c</fullName>
    <label>Monday Notes</label>
    <type>TextArea</type>
</CustomField>