force-app/main/default/objects/Time_Entry__c/fields/Thursday_Date__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Date__c</fullName>
    <label>Thursday Date</label>
    <type>Date</type>
</CustomField>