force-app/main/default/objects/Time_Entry__c/fields/Thursday_Notes__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Notes__c</fullName>
    <label>Thursday Notes</label>
    <type>TextArea</type>
</CustomField>