force-app/main/default/objects/Time_Entry__c/fields/Tuesday_Date__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Date__c</fullName>
    <label>Tuesday Date</label>
    <type>Date</type>
</CustomField>