force-app/main/default/objects/Time_Entry__c/fields/Tuesday_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Notes__c</fullName>
    <label>Tuesday Notes</label>
    <type>TextArea</type>
</CustomField>