force-app/main/default/objects/Time_Entry__c/fields/Wednesday_Date__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Date__c</fullName>
    <label>Wednesday Date</label>
    <type>Date</type>
</CustomField>