force-app/main/default/objects/Time_Entry__c/fields/Wednesday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Hours__c</fullName>
    <label>Wednesday Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>