force-app/main/default/objects/Time_Entry__c/fields/Wednesday_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Notes__c</fullName>
    <label>Wednesday Notes</label>
    <type>TextArea</type>
</CustomField>